--- a/src/style/MapLinkStyle/MapButton.css
+++ b/src/style/MapLinkStyle/MapButton.css
@@ -5,6 +5,7 @@
     justify-content: center;
     font-size: 3vh;
     color: #fff;
+    text-shadow: 0 8px 5px steelblue;
     font-weight: normal;
     background: none;
     border: none;
@@ -17,5 +18,5 @@
     box-shadow: 0 7px 5px steelblue;
     border: 1px solid steelblue;
     background-color: rgb(162, 209, 248);
-    transition: all 0.25s ease-out;
+    transition: all 0.26s ease-out;
   }
